--- a/Dateflix-MVC/Views/Shared/_Layout.cshtml
+++ b/Dateflix-MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -35,6 +36,13 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Login" asp-action="Index">Login</a></li>
                     <li><a asp-area="" asp-controller="Test" asp-action="Index">Test</a></li>
+                    <li><a asp-area="" asp-controller="PrivateChat" asp-action="Index">Private chat</a></li>
+                    <li><a asp-area="" asp-controller="PrivateChat" asp-action="TestOne">TestOne</a></li>
+                    @if (Context.Session.GetString("Username") != null)
+                    {
+                        <li><a asp-area="" asp-controller="PrivateChat" asp-action="TestTwo">TestTwo</a></li>
+                        <li><a asp-area="" asp-controller="Login" asp-action="Logout">Logout</a></li>
+                    }
                 </ul>
             </div>
         </div>
