--- a/Dateflix-MVC/Views/PrivateChat/TestTwo.cshtml
+++ b/Dateflix-MVC/Views/PrivateChat/TestTwo.cshtml
@@ -30,7 +30,7 @@
 <script>
     var email = "";
     //var sessionVal = '';
-    var connection = new signalR.HubConnectionBuilder().withUrl("/privatechathub?email=testingUsername").build();
+    var connection = new signalR.HubConnectionBuilder().withUrl("/privatechathub?email=test1@test.com").build();
     var connectionId = null;
     async function getConnectionId() {
         return connection.invoke("GetConnectionId");
@@ -43,7 +43,7 @@
             document.getElementById('yourConnectionId').innerHTML = connectionId;
             $('#displayname').val(email);
             swal("You connection Id", connectionId, "success");
-        }).catch(function (err) {
+            }).catch(function (err) {
             return console.error(err.toString());
             });
 
@@ -61,6 +61,9 @@
             $('#discussion').append('<li><strong>' + htmlEncode($('#displayname').val())
                 + '</strong>: ' + htmlEncode($('#message').val()) + '</li>');
             $('#message').val('').focus();
+
+            var friendConnectionId = connection.invoke("GetConnectionIdFromEmail", $("#frndConnId").val(), null);
+            $('#frndConnId').val(friendConnectionId);
         });
 
         $('#getMessages').click(function() {
